# x-algorithm

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RUST_BUILD.md  SECURITY.md  index.html  rustfmt.toml
.agent/skills/create-interactive-tool/: SKILL.md
.agent/skills/git-commit-push/: SKILL.md
.agent/skills/prepare-github-pr/: SKILL.md
.agent/skills/rust-ci-fix/: SKILL.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: python-ci.yml  rust-ci.yml
candidate-pipeline/: Cargo.toml  candidate_pipeline.rs  filter.rs  hydrator.rs  query_hydrator.rs  scorer.rs  selector.rs  side_effect.rs  source.rs  util.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  POSTING_STRATEGY.md  TWITTER_THREAD.md
home-mixer/: Cargo.toml  config.rs  lib.rs  main.rs  params.rs  proto.rs  server.rs
home-mixer/benches/: scoring_benchmark.rs
home-mixer/candidate_pipeline/: candidate.rs  phoenix_candidate_pipeline.rs  query.rs
home-mixer/filters/: age_filter.rs  content_quality_filters.rs  mod.rs
home-mixer/personalization/: mod.rs  user_clusters.rs
home-mixer/scorers/: batch_scorer.rs  batched_phoenix_scorer.rs  cached_phoenix_scorer.rs  mod.rs  personalized_weighted_scorer.rs  weighted_scorer.rs
home-mixer/tests/: integration_tests.rs
home-mixer/util/: mod.rs  request_util.rs  score_normalizer.rs  snowflake.rs
phoenix/: antigravity_validator.py  grok.py  pyproject.toml
scripts/: deploy.sh  verify_optimizations.sh
thunder/: Cargo.toml  args.rs  candidate_source.rs  config.rs  lib.rs  main.rs  realtime_query.rs
tools/: engagement-heatmap.html  feed-simulator.html  pipeline-visualization.html  post-analyzer.html  posting-time-optimizer.html  score-calculator.html  simclusters-explorer.html  viral-score-analyzer.html
visualizations/: performance_charts.py  performance_dashboard.html
viz/: README.md  index_premium.html  script.js  style.css
