[workspace]
members = [
    "candidate-pipeline",
    "home-mixer",
    "thunder",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["xAI"]
license = "Apache-2.0"

[workspace.dependencies]
# Common dependencies can be defined here for sharing across crates
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
itertools = "0.12"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tonic = { version = "0.10", features = ["gzip"] }
prost = "0.12"

[profile.release]
# Optimization level
opt-level = 3
# Link-time optimization for better performance
lto = true
# Codegen units (1 = best optimization, slower compile)
codegen-units = 1
# Strip symbols for smaller binary
strip = true
# Overflow checks in release (safety vs speed tradeoff)
overflow-checks = false

[profile.dev]
# Faster compile times in development
opt-level = 0

[profile.test]
# Optimize tests for faster execution
opt-level = 2
