[package]
name = "home-mixer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "home_mixer"
path = "lib.rs"

[[bin]]
name = "home-mixer"
path = "main.rs"

[dependencies]
candidate-pipeline = { path = "../candidate-pipeline" }

# Core async runtime
tokio.workspace = true

# gRPC framework
tonic.workspace = true
prost.workspace = true
tonic-reflection = "0.11"

# Logging
log.workspace = true
env_logger = "0.11"

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP server and client
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower = "0.4"
tower-http = "0.5"

# Time utilities
chrono.workspace = true

# Collections and utilities
itertools.workspace = true
clap = { version = "4.5", features = ["derive"] }
anyhow.workspace = true
futures.workspace = true

# LRU cache for Phoenix scoring cache
lru = "0.12"

# High-performance cache for age filter
moka = { version = "0.12", features = ["sync"] }

# HTTP types
http = "1.1"

[dev-dependencies]
# Testing utilities
criterion = "0.5"
proptest = "1.4"

[features]
default = []
