[package]
name = "thunder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "thunder"
path = "lib.rs"

[[bin]]
name = "thunder"
path = "main.rs"

[dependencies]
anyhow.workspace = true
axum = "0.7"
clap = { version = "4.4", features = ["derive"] }
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true

# External xAI crates
xai_http_server = "0.1"
xai_profiling = "0.1"

# Kafka dependencies (assuming rdkafka)
rdkafka = { version = "0.36", features = ["tokio"] }

[dev-dependencies]
# Add dev dependencies if needed
